--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <h1>PAPA JI</h1>
         </div>
         <div class="a-class">
-        <a href="http://127.0.0.1:5500/file-1.html" class="link-1" target="-main">NEXT</a>
+        <a href="file-1.html" class="link-1" target="-main">NEXT</a>
        </div>
     </div>
 
