--- a/file-1.html
+++ b/file-1.html
@@ -123,7 +123,7 @@ clip-path: polygon(0% 0%, 75% 0%, 100% 50%, 75% 100%, 0% 100%);
         <p class="p-4">You always been my personal superhero. Thank You for all the lessons you've taught me over the year.The main who are sacrificed so much for me.I admire you more then you'll ever Know.You are the person responsible for shaping me into the person,I am today.I Love you Papa...  </p>
      </div>
     <div class="children">
-    <a href="http://127.0.0.1:5500/file-2.html" class="link-1" target="-main">NEXT</a>
+    <a href="file-2.html" target="-main">NEXT</a>
     
 </div>
 </div>
