--- a/file-2.html
+++ b/file-2.html
@@ -60,7 +60,7 @@
         <img src="7-img.jpg" class="img-1" width="100%" height="345px">
         <img src="8-img.jpg" class="img-1" width="100%" height="295px">
         <div class="children">
-    <a href="http://127.0.0.1:5500/file-3.html" class="link-1" target="-main">NEXT</a>
+    <a href="file-3.html" target="-main">NEXT</a>
 
     </div>
 </body>
