--- a/index.html
+++ b/index.html
@@ -37,12 +37,16 @@
         .link-1{
             text-decoration: none;
         }
+        .img-1{
+            height{
+                550px
+            }
     </style>
 </head>
 <body>
     <div class="contaner">
         <div class="first">
-            <img src="img-1.gif">
+            <img CLASS="img-1" src="img-1.gif">
         </div>
         <div class="name">
             <h1>HAPPY</h1>
