--- a/index.html
+++ b/index.html
@@ -38,9 +38,8 @@
             text-decoration: none;
         }
         .img-1{
-            height{
-                300px
-            }
+            height: 400px;
+        }
     </style>
 </head>
 <body>
