--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         .link-1{
             text-decoration: none;
         }
-        .img-1{
-            height: 400px;
+        .first{
+            height:300px;
         }
     </style>
 </head>
