--- a/file-1.html
+++ b/file-1.html
@@ -73,7 +73,7 @@ clip-path: polygon(0% 0%, 75% 0%, 100% 50%, 75% 100%, 0% 100%);
          background-color: blue;
          width: 95%;
          text-align: center;
-         padding: 10px;
+         padding: 50%;
          border-radius: 10px;
          margin: 0px;
         }
