--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         .a-class{
             background-color: aqua;
             color: aliceblue;
-            padding: 10px;
+            padding: 50%;
             /* border: 2px solid black; */
             border-radius: 10px;
             cursor:grab;
@@ -37,9 +37,9 @@
         .link-1{
             text-decoration: none;
         }
-        .first{
+/*         .first{
             height:300px;
-        }
+        } */
     </style>
 </head>
 <body>
