--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <h1>PAPA JI</h1>
         </div>
         <div class="a-class">
-        <a href="file-1.html" class="link-1" target="-main">NEXT</a>
+        <a href="file-1.html" target="-main">NEXT</a>
        </div>
     </div>
 
