--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         .a-class{
             background-color: aqua;
             color: aliceblue;
-            padding: 50%;
+            padding: 10px;
             /* border: 2px solid black; */
             border-radius: 10px;
             cursor:grab;
