--- a/file-2.html
+++ b/file-2.html
@@ -42,7 +42,7 @@
          background: red;
          border:4px solid rgb(35, 140, 12);
         }
-        .children{
+/*         .children{
          /* position: absolute;
          top: 80%; */
          background-color: blue;
@@ -51,6 +51,25 @@
          padding: 10px;
          border-radius: 10px;
          margin: 0px;
+        } */
+        nav a{
+            text-decoration: none;
+            color: red;
+            padding: 50%;
+           font-weight: 900;
+           font-size: large;
+           font-style: italic;
+           font-variant: normal;
+        }
+        nav{
+            background-color: blue;
+            width: 100%;
+            text-align: center;
+            border-radius: 5px;
+            border: 2px solid black;
+        }
+        nav a:hover{
+        color: rgb(177, 106, 118);
         }
     </style>
 </head>
@@ -59,9 +78,8 @@
         <h3>Click on image</h3>
         <img src="1-img.jpg" class="img-1" width="100%" height="300px">
         <img src="8-img.jpg" class="img-1" width="100%" height="295px">
-        <div class="children">
+        <nav>
     <a href="file-3.html" target="-main">NEXT</a>
-
-    </div>
+        </nav>
 </body>
 </html>
