--- a/file-2.html
+++ b/file-2.html
@@ -42,7 +42,7 @@
          background: red;
          border:4px solid rgb(35, 140, 12);
         }
-/*         .children{
+       .children{
          /* position: absolute;
          top: 80%; */
          background-color: blue;
@@ -51,8 +51,8 @@
          padding: 10px;
          border-radius: 10px;
          margin: 0px;
-        } */
-        nav a{
+        
+/*         nav a{
             text-decoration: none;
             color: red;
             padding: 50%;
@@ -70,7 +70,7 @@
         }
         nav a:hover{
         color: rgb(177, 106, 118);
-        }
+        } */
     </style>
 </head>
 <body>
@@ -78,8 +78,8 @@
         <h3>Click on image</h3>
         <img src="1-img.jpg" class="img-1" width="100%" height="300px">
         <img src="8-img.jpg" class="img-1" width="100%" height="295px">
-        <nav>
+        <div class="children">
     <a href="file-3.html" target="-main">NEXT</a>
-        </nav>
+        </div>
 </body>
 </html>
