--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
 /*         .first{
             height:300px;
         } */
+        a{
+        text-decoration: none;
+        padding: 50%;
+        }
     </style>
 </head>
 <body>
