--- a/file-1.html
+++ b/file-1.html
@@ -101,7 +101,9 @@ clip-path: polygon(0% 0%, 75% 0%, 100% 50%, 75% 100%, 0% 100%);
         text-align: center;
        }
         a{
-           color:white;
+           color:white;    
+        text-decoration: none;
+        padding: 50%;
         }
     </style>
 </head>
