--- a/file-2.html
+++ b/file-2.html
@@ -71,6 +71,10 @@
         nav a:hover{
         color: rgb(177, 106, 118);
         } */
+              a{
+        text-decoration: none;
+        padding: 50%;
+        }
     </style>
 </head>
 <body>
